2008-11-11  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs: null guarding for
	all the things that can possibly go wrong with the parse in 
	GetClass.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Create the
	formInfos list when the project is loaded. This is necessary since
	the list is destroyed when the project is unloaded. Fixes bug #Bug
	431723 - Cannot build GTK applications with sln format.

2008-11-06  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.NodeBuilders/ProjectFolderNodeBuilderExtension.cs:
	revert the context menu changes. Don't show them if the project has no
	gtk-sharp ref, only add the templates to the dialog, per Lluis.

2008-11-06  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/WidgetFileDescriptionTemplate.cs:
	* MonoDevelop.GtkCore.NodeBuilders/ProjectFolderNodeBuilderExtension.cs:
	show Add Widget|Window|Dialog|ActionGroup template items in the context
	menu and Add File dialog even when the project has no Gtk# reference.

2008-11-05  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs: needed to revert
	the >= to <= change from the 440435 fix since the refmgr is now 
	reporting TargetGtkVersion without Version=.  oops.

2008-11-05  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/ReferenceManager.cs: strip Version= out of
	TargetGtkVersion.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.addin.xml: Bump MD version.

2008-10-30  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/ReferenceManager.cs: 
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: 
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs: 
	switch to a x.y TargetGtkVersion obtained by parsing the gtk-sharp
	reference version. Invert the version comparison in the toolboxitem
	filter.  We want toolbox items that are less than the project target